--- a/rodri-toyama/somos.html
+++ b/rodri-toyama/somos.html
@@ -16,7 +16,7 @@
 <body>
 
     <nav class="navbar navbar-expand-md navbar-dark bg-orangened">
-        <a class="navbar-brand" href="../images/iconolog.png"></a>
+        <a class="navbar-brand" href="images/iconolog.png"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -24,16 +24,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-brand active">
-                    <img src="../images/logo_cabecera.png" class="logomenu" alt="Logo de cabecera delfos" width="74" height="90">
+                    <img src="images/logo_cabecera.png" class="logomenu" alt="Logo de cabecera delfos" width="74" height="90">
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="../index.html">Home<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.php">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="../gallery/gallery.html">Paquetes</a>
+                    <a class="nav-link" href="gallery.html">Paquetes</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="../contacto/contacto.html">Contacto</a>
+                    <a class="nav-link" href="contacto.html">Contacto</a>
                 </li>
                 <li class="nav-item dropdown">
                 </li>
@@ -45,7 +45,7 @@
 
         <div class="container-fluid">
             <div>
-                <img src="../images/institucional.jpg" class="d-block w-100 img-fluid" alt="foto empleados de delfos" height="750" width="441">
+                <img src="images/institucional.jpg" class="d-block w-100 img-fluid" alt="foto empleados de delfos" height="750" width="441">
 
             </div>
 
@@ -88,7 +88,7 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-4 col-md-3 col-lg-2">
                     <div>
-                        <img src="../images/logo_delfos.png" id="logo" alt="icono de logo delfos" width="72" height="84">
+                        <img src="images/logo_delfos.png" id="logo" alt="icono de logo delfos" width="72" height="84">
                     </div>
                     <div class="Legajo">
                         N° Legajo 11486
@@ -97,7 +97,7 @@
 
                 <div class="col-xs-12 col-sm-4 col-md-3 col-lg-2">
                     <div>
-                        <img src="../images/Phone-icon.png" class="phoneicon" alt="icono de telefono delfos" width="128" height="128">
+                        <img src="images/Phone-icon.png" class="phoneicon" alt="icono de telefono delfos" width="128" height="128">
                         0810 8103353
                     </div>
                 </div>
@@ -105,7 +105,7 @@
 
                 <div class="col-xs-12 col-sm-4 col-md-3 col-lg-2">
                     <div>
-                        <a href="mailto:info@delfos.tur.ar"> <img src="../images/email-2-icon.png" class="emailicon" alt="icono de email delfos" width="128" height="128"></a>
+                        <a href="mailto:info@delfos.tur.ar"> <img src="images/email-2-icon.png" class="emailicon" alt="icono de email delfos" width="128" height="128"></a>
                         info@delfos.tur.ar
                     </div>
                 </div>
@@ -113,7 +113,7 @@
 
                 <div class="col-xs-12 col-sm-6 col-md-3 col-lg-2">
                     <div class="locationicon">
-                        <a href="https://goo.gl/maps/dif9jy2WHjwzRtiG7" target="_blank"><img src="../images/location-icon.png" class="ubicacion" alt="icono de redireccionamiento google maps" width="128" height="128"></a>
+                        <a href="https://goo.gl/maps/dif9jy2WHjwzRtiG7" target="_blank"><img src="images/location-icon.png" class="ubicacion" alt="icono de redireccionamiento google maps" width="128" height="128"></a>
                     </div>
                     <div> Cnel. Juan Beverina 1988</div>
                     <div> CP: X5009IOH</div>
@@ -124,9 +124,9 @@
 
                 <div class="col-xs-12 col-sm-6 col-md-3 col-lg-2">
                     <div>Mapa del sitio</div>
-                    <div><a href="../index.html">Home</a></div>
-                    <div><a href="../gallery/gallery.html">Paquetes</a></div>
-                    <div><a href="../contacto/contacto.html">Contacto</a></div>
+                    <div><a href="index.php">Home</a></div>
+                    <div><a href="gallery.html">Paquetes</a></div>
+                    <div><a href="contacto.html">Contacto</a></div>
                 </div>
             </div>
 
